--- a/external/configs/timebox_defconfig
+++ b/external/configs/timebox_defconfig
@@ -32,7 +32,10 @@ BR2_TARGET_ROOTFS_EXT2_4=y
 #BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
 
-
+BR2_TARGET_GENERIC_ROOT_PASSWD="timebox"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/board/kulabs/timebox/rootfs"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL)/board/kulabs/timebox/post_build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL)/board/kulabs/timebox/post_image.sh"
 
 # Bootloader
 BR2_TARGET_UBOOT=y
@@ -48,7 +51,13 @@ BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot-with-spl.bin"
 
 #BR2_ENABLE_DEBUG=y
 #BR2_PACKAGE_HOST_GDB=y
+
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+
+
+BR2_PACKAGE_HOST_GENIMAGE=y
+BR2_PACKAGE_HOST_GENPART=y
+
 #
 # ALSA utils selection
 #
