--- a/external/configs/timebox_wip_defconfig
+++ b/external/configs/timebox_wip_defconfig
@@ -31,7 +31,10 @@ BR2_TARGET_ROOTFS_EXT2_4=y
 #BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
 
-
+BR2_TARGET_GENERIC_ROOT_PASSWD="timebox"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/board/kulabs/timebox/rootfs"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL)/board/kulabs/timebox/post_build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL)/board/kulabs/timebox/post_image.sh"
 
 # Bootloader
 BR2_TARGET_UBOOT=y
@@ -47,9 +50,13 @@ BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot-with-spl.bin"
 
 #BR2_ENABLE_DEBUG=y
 #BR2_PACKAGE_HOST_GDB=y
+
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 
-#BR2_ROOTFS_OVERLAY="board/amlogic/meson8_k200/rootfs/"
+
+BR2_PACKAGE_HOST_GENIMAGE=y
+BR2_PACKAGE_HOST_GENPART=y
+
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
