--- a/external/Config.in
+++ b/external/Config.in
@@ -1,3 +1,8 @@
 
+menu "External packages"
 
 source "$BR2_EXTERNAL/package/foo/Config.in"
+
+source "$BR2_EXTERNAL/package/toybox/Config.in"
+
+endmenu
