timebox: use github uboot src
Signed-off-by: Kaspter Ju <nigh0st3018@gmail.com>

--- a/external/configs/timebox_defconfig
+++ b/external/configs/timebox_defconfig
@@ -1494,7 +1494,7 @@ BR2_TARGET_UBOOT_BOARDNAME="m8_k200_v1"
 # BR2_TARGET_UBOOT_CUSTOM_TARBALL is not set
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 # BR2_TARGET_UBOOT_CUSTOM_HG is not set
-BR2_TARGET_UBOOT_CUSTOM_REPO_URL="/Repos/system/uboot"
+BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/linux-knight/uboot.git"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="heven/timebox"
 BR2_TARGET_UBOOT_VERSION="heven/timebox"
 BR2_TARGET_UBOOT_CUSTOM_PATCH_DIR=""
